@@ -17,7 +17,6 @@
 	<requires>
 		<import addon="xbmc.python" version="2.1.0"/>
 		<import addon="script.module.simplejson" version="2.0.10"/>
-		<import addon="script.module.buggalo" version="1.1.2"/>
 	</requires>
 	<extension point="xbmc.python.script" library="addon.py"/>
 	<extension point="xbmc.addon.metadata">
