@@ -27,7 +27,6 @@ import xbmcgui
 import source as src
 from notification import Notification
 from strings import *
-import buggalo
 
 import streaming
 
@@ -156,8 +155,6 @@ class TVGuide(xbmcgui.WindowXML):
             if controlId in self.ignoreMissingControlIds:
                 return None
             if not self.isClosing:
-                xbmcgui.Dialog().ok(buggalo.getRandomHeading(), strings(SKIN_ERROR_LINE1), strings(SKIN_ERROR_LINE2),
-                                    strings(SKIN_ERROR_LINE3))
                 self.close()
             return None
 
@@ -171,7 +168,6 @@ class TVGuide(xbmcgui.WindowXML):
             else:
                 super(TVGuide, self).close()
 
-    @buggalo.buggalo_try_except({'method': 'TVGuide.onInit'})
     def onInit(self):
         self._hideControl(self.C_MAIN_MOUSE_CONTROLS, self.C_MAIN_OSD)
         self._showControl(self.C_MAIN_EPG, self.C_MAIN_LOADING)
@@ -199,7 +195,6 @@ class TVGuide(xbmcgui.WindowXML):
         self.database.initialize(self.onSourceInitialized, self.isSourceInitializationCancelled)
         self.updateTimebar()
 
-    @buggalo.buggalo_try_except({'method': 'TVGuide.onAction'})
     def onAction(self, action):
         debug('Mode is: %s' % self.mode)
 
@@ -328,7 +323,6 @@ class TVGuide(xbmcgui.WindowXML):
             if program is not None:
                 self._showContextMenu(program)
 
-    @buggalo.buggalo_try_except({'method': 'TVGuide.onClick'})
     def onClick(self, controlId):
         if controlId in [self.C_MAIN_LOADING_CANCEL, self.C_MAIN_MOUSE_EXIT]:
             self.close()
@@ -429,7 +423,6 @@ class TVGuide(xbmcgui.WindowXML):
 
         super(TVGuide, self).setFocus(control)
 
-    @buggalo.buggalo_try_except({'method': 'TVGuide.onFocus'})
     def onFocus(self, controlId):
         try:
             controlInFocus = self.getControl(controlId)
@@ -921,24 +914,21 @@ class TVGuide(xbmcgui.WindowXML):
             control.setText(text)
 
     def updateTimebar(self, scheduleTimer=True):
-        try:
-            # move timebar to current time
-            timeDelta = datetime.datetime.today() - self.viewStartDate
-            control = self.getControl(self.C_MAIN_TIMEBAR)
-            if control:
-                (x, y) = control.getPosition()
-                try:
-                    # Sometimes raises:
-                    # exceptions.RuntimeError: Unknown exception thrown from the call "setVisible"
-                    control.setVisible(timeDelta.days == 0)
-                except:
-                    pass
-                control.setPosition(self._secondsToXposition(timeDelta.seconds), y)
+        # move timebar to current time
+        timeDelta = datetime.datetime.today() - self.viewStartDate
+        control = self.getControl(self.C_MAIN_TIMEBAR)
+        if control:
+            (x, y) = control.getPosition()
+            try:
+                # Sometimes raises:
+                # exceptions.RuntimeError: Unknown exception thrown from the call "setVisible"
+                control.setVisible(timeDelta.days == 0)
+            except:
+                pass
+            control.setPosition(self._secondsToXposition(timeDelta.seconds), y)
 
-            if scheduleTimer and not xbmc.abortRequested and not self.isClosing:
-                threading.Timer(1, self.updateTimebar).start()
-        except Exception:
-            buggalo.onExceptionRaised()
+        if scheduleTimer and not xbmc.abortRequested and not self.isClosing:
+            threading.Timer(1, self.updateTimebar).start()
 
 
 class PopupMenu(xbmcgui.WindowXMLDialog):
@@ -968,7 +958,6 @@ class PopupMenu(xbmcgui.WindowXMLDialog):
         self.showRemind = showRemind
         self.buttonClicked = None
 
-    @buggalo.buggalo_try_except({'method': 'PopupMenu.onInit'})
     def onInit(self):
         playControl = self.getControl(self.C_POPUP_PLAY)
         remindControl = self.getControl(self.C_POPUP_REMIND)
@@ -1002,13 +991,11 @@ class PopupMenu(xbmcgui.WindowXMLDialog):
         else:
             remindControl.setEnabled(False)
 
-    @buggalo.buggalo_try_except({'method': 'PopupMenu.onAction'})
     def onAction(self, action):
         if action.getId() in [ACTION_PARENT_DIR, ACTION_PREVIOUS_MENU, KEY_NAV_BACK, KEY_CONTEXT_MENU]:
             self.close()
             return
 
-    @buggalo.buggalo_try_except({'method': 'PopupMenu.onClick'})
     def onClick(self, controlId):
         if controlId == self.C_POPUP_CHOOSE_STREAM and self.database.getCustomStreamUrl(self.program.channel):
             self.database.deleteCustomStreamUrl(self.program.channel)
@@ -1047,12 +1034,10 @@ class ChannelsMenu(xbmcgui.WindowXMLDialog):
         self.channelList = database.getChannelList(onlyVisible=False)
         self.swapInProgress = False
 
-    @buggalo.buggalo_try_except({'method': 'ChannelsMenu.onInit'})
     def onInit(self):
         self.updateChannelList()
         self.setFocusId(self.C_CHANNELS_LIST)
 
-    @buggalo.buggalo_try_except({'method': 'ChannelsMenu.onAction'})
     def onAction(self, action):
         if action.getId() in [ACTION_PARENT_DIR, ACTION_PREVIOUS_MENU, KEY_NAV_BACK, KEY_CONTEXT_MENU]:
             self.close()
@@ -1084,7 +1069,6 @@ class ChannelsMenu(xbmcgui.WindowXMLDialog):
             if idx < listControl.size() - 1:
                 self.swapChannels(idx, idx + 1)
 
-    @buggalo.buggalo_try_except({'method': 'ChannelsMenu.onClick'})
     def onClick(self, controlId):
         if controlId == self.C_CHANNELS_LIST:
             listControl = self.getControl(self.C_CHANNELS_LIST)
@@ -1202,7 +1186,6 @@ class StreamSetupDialog(xbmcgui.WindowXMLDialog):
             self.player.stop()
         super(StreamSetupDialog, self).close()
 
-    @buggalo.buggalo_try_except({'method': 'StreamSetupDialog.onInit'})
     def onInit(self):
         self.getControl(self.C_STREAM_VISIBILITY_MARKER).setLabel(self.VISIBLE_STRM)
 
@@ -1229,7 +1212,6 @@ class StreamSetupDialog(xbmcgui.WindowXMLDialog):
         listControl.addItems(items)
         self.updateAddonInfo()
 
-    @buggalo.buggalo_try_except({'method': 'StreamSetupDialog.onAction'})
     def onAction(self, action):
         if action.getId() in [ACTION_PARENT_DIR, ACTION_PREVIOUS_MENU, KEY_NAV_BACK, KEY_CONTEXT_MENU]:
             self.close()
@@ -1238,7 +1220,6 @@ class StreamSetupDialog(xbmcgui.WindowXMLDialog):
         elif self.getFocusId() == self.C_STREAM_ADDONS:
             self.updateAddonInfo()
 
-    @buggalo.buggalo_try_except({'method': 'StreamSetupDialog.onClick'})
     def onClick(self, controlId):
         if controlId == self.C_STREAM_STRM_BROWSE:
             stream = xbmcgui.Dialog().browse(1, ADDON.getLocalizedString(30304), 'video', '.strm')
@@ -1300,7 +1281,6 @@ class StreamSetupDialog(xbmcgui.WindowXMLDialog):
                     self.getControl(self.C_STREAM_FAVOURITES_PREVIEW).setLabel(strings(STOP_PREVIEW))
                     self.getControl(self.C_STREAM_STRM_PREVIEW).setLabel(strings(STOP_PREVIEW))
 
-    @buggalo.buggalo_try_except({'method': 'StreamSetupDialog.onFocus'})
     def onFocus(self, controlId):
         if controlId == self.C_STREAM_STRM_TAB:
             self.getControl(self.C_STREAM_VISIBILITY_MARKER).setLabel(self.VISIBLE_STRM)
@@ -1345,7 +1325,6 @@ class ChooseStreamAddonDialog(xbmcgui.WindowXMLDialog):
         self.addons = addons
         self.stream = None
 
-    @buggalo.buggalo_try_except({'method': 'ChooseStreamAddonDialog.onInit'})
     def onInit(self):
         items = list()
         for id, label, url in self.addons:
@@ -1360,18 +1339,15 @@ class ChooseStreamAddonDialog(xbmcgui.WindowXMLDialog):
 
         self.setFocus(listControl)
 
-    @buggalo.buggalo_try_except({'method': 'ChooseStreamAddonDialog.onAction'})
     def onAction(self, action):
         if action.getId() in [ACTION_PARENT_DIR, ACTION_PREVIOUS_MENU, KEY_NAV_BACK]:
             self.close()
 
-    @buggalo.buggalo_try_except({'method': 'ChooseStreamAddonDialog.onClick'})
     def onClick(self, controlId):
         if controlId == ChooseStreamAddonDialog.C_SELECTION_LIST:
             listControl = self.getControl(ChooseStreamAddonDialog.C_SELECTION_LIST)
             self.stream = listControl.getSelectedItem().getProperty('stream')
             self.close()
 
-    @buggalo.buggalo_try_except({'method': 'ChooseStreamAddonDialog.onFocus'})
     def onFocus(self, controlId):
         pass
